# dionysus3-core

./: .circuit_breaker_state  .clinerules  .dockerignore  .env.example  .env.local  .gitignore  2026-1-25 13-45-25-Alignment_Review_and_Refinement.txt  @AGENT.md  @fix_plan.md  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTEXT_STATE_RECOVERY.md  COORDINATION.md  Dockerfile.agent-sandbox  Dockerfile.api  GEMINI.md  MoSAEIC-Implementation-Addendum.md  MoSAEIC-Implementation-Correction-Guide.md  MoSAEIC-Protocol-Spec.md  NOTICE  PROMPT.md  README.md  SESSION_CONTEXT_2025-12-07.md  SESSION_CONTEXT_2025-12-09.md  SESSION_HANDOFF_2025_12_27.md  Smolagents_ An Overview.md  architecture.md  claude-convo-smolagent  db-manage.sh  db_check.py  debug_core.py  debug_graphiti_import.py  debug_imports.py  debug_imports_v2.py  debug_patches.py  dev_init.sh  docker-compose.local.yml  docker-compose.test.yml  (+37 more)
.conductor/: 059-identity-repair-protocol.md  architecture_whitepaper.md  best-practices.md  constraints.md  context.md  roadmap.md  workflow.md
.gemini/: settings.json
.serena/: project.yml
api/: framework.py  main.py
assets/: email_05.json  email_07.json  ias_scc_vsl_script.json  new_year_6am_email.json  sales_page_tripwire.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
data/: ias-curriculum-full.json
dionysus-dashboard/: build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  package-lock.json  package.json
dionysus_mcp/: __init__.py  server.py
docs/: COPY_GUIDE_CURRENT_OFFER.md  Consciousness Engineering Knowledge Web.md  DESIGN_SPEC.md  DOCUMENTATION-AGENT-GUIDE.md  DOCUMENTATION_BACKLOG.md  FRONTEND_FLOW.md  IAS-CURRICULUM-DATA-MODEL.md  IAS-CURRICULUM-IMPLEMENTATION-GUIDE.md  IAS-INDEX.md  IAS-MERGED-DATA-MODEL.md  PDF-WORKFLOW-GUIDE.md  PROGRESS.md  TERMINOLOGY.md  TESTING_COVERAGE.md  active-inference-integration.md  api-search.md  api-sync.md  avatar.md  coordination.md  discovery.md  index.md  ingestion-rules.md  n8n-paper-workflows.md  neo4j-paper-schema.md  pdf-ingestion-pipeline.md  schema_retrieval_architecture.mermaid  synergy_plan.md  thoughtseeds-implementation-plan.md  thoughtseeds-paper-models-extraction.md
inner-architect-system/: package.json
mcp/: server.py
migrations/: 000_test_base_schema.sql  001_add_sync_tracking_to_memories.sql  001_session_continuity.sql  002_create_sync_events_table.sql  003_create_sync_queue_table.sql  004_create_session_metadata_table.sql  005_create_vector_index.cypher  006_create_goal_schema.cypher  007_create_heartbeat_schema.cypher  008_create_mental_models.sql  009_mental_models_identity_worldview_integration.sql  010_extend_revision_trigger_enum.sql  011_worldview_prediction_errors.sql  012_mosaeic_memory.sql  014_drop_mosaeic_tables.sql
(+10601 files in other folders)
