[project]
name = "dionysus-core"
version = "0.1.0"
description = "Lightweight consciousness system for Claude MCP integration"
authors = [{name = "Mani Saint Victor"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.116.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",

    # AI/ML
    "openai>=2.14.0",
    "anthropic>=0.75.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.1",
    "smolagents>=1.23.0",
    "litellm>=1.80.11",

    # MCP Server
    "mcp>=1.12.2",
    "mcpadapt>=0.1.19",

    # Knowledge Graph (Neo4j via Graphiti)
    "neo4j>=5.28.2",
    "graphiti-core>=0.24.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
]

[project.scripts]
dionysus-core = "dionysus_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "dionysus_mcp*", "mcp*", "scripts*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
